fixed broken styles after node ux improvement

--- a/packages/editor/src/plugins/contextMenu/style.module.scss
+++ b/packages/editor/src/plugins/contextMenu/style.module.scss
@@ -20,6 +20,6 @@
   }
 
   &:hover {
-    background-color: var(--glow);
+    background-color: var(--primary);
   }
 }
